# pypcga

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  bibliography.bib  makefile  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/sources/: api_reference.rst  conf.py  index.rst  installation.rst  theory.rst  usage.rst
docs/sources/notebooks/: 2d_toy_example.nblink
examples/: 2d_toy_example.ipynb  test_pcga.ipynb
examples/ERT_E4D/: README.md  ert.py  inv_ert.py
examples/ERT_E4D/input_files/: agu.1.face  agu.srv_old  e4d.inp
examples/adh_Savannah/: adh.py  inv_adh_savannah.ipynb  pcga_wrapper.py  run_adh.py  setup_savannah.py
examples/fenics_hydromechanics/: README.md  example_inv_fenics.py  gen_logk_idx.py  plot_results.py  poro.py
examples/mare2dem_MT/: inv_MT_example.py  inversion_mare2dem.ipynb  mare2dem.py
examples/mare2dem_MT/input_files/: fwd_model.0.resistivity_head  fwd_model.0.resistivity_old  fwd_model.0.resp_old  fwd_model.emdata  fwd_model.poly  fwd_model.poly_head  mare2dem.settings
examples/modflow_flopy/: example_inv_mf.py  inversion_modflow.ipynb  mf.py
examples/pumping_history_identification/: drawdown.py  example_linear_inversion.py  example_nonlinear_inversion.py  linear_inverse_problem_pumping_history_identification.ipynb  nonlinear_inverse_problem_pumping_history_identification.ipynb
examples/stwave_duck/: example_inv_stwave.py  inversion_stwave.ipynb  stwave.py
examples/tough_heat/: README.md  inv_tough_joint.py  joint_inversion_example_tough.ipynb  tough.py
examples/tracer_tomography_ade_crunch/: crunch.py  inv_crunch_example.py  inversion_example_advection_diffusion_crunchtope.ipynb
examples/tracer_tomography_ade_crunch/input_files/: OldRifleDatabase_Cr.dbs  aqueous.dbs
pypcga/: __init__.py  _pcga.py  _utils.py
tests/: test_pypcga.py
