[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypcga"
dynamic = ["version"]
authors = [{ name = "Jonghyun Harry Lee", email = "jonghyun.harry.lee@hawaii.edu"}, { name = "Antoine Collet", email = "antoinecollet5@gmail.com" }]
readme = "README.rst"
description = "A python implementation of the Principal Component Geostatistical Approach (PCGA) for large scale inversion."
keywords = [
    "Inversion",
    "Eigen factorization",
    "PCGA",
    "Parameters estimation",
    "Large-Scale",
    "Uncertainty-Quantification",
    "Uncertainty-Estimation",
    "Inversion-Method"
]
license = { file = "LICENSE" }

dependencies = [
    "numpy>=1.2",
    "scipy>=1.12.2",
    "covmats>=0.2.2"
]

requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://pypi.org/project/pypcga/"
Documentation = "https://pypcga.readthedocs.io/en/latest/"
Repository = "https://github.com/antoinecollet5/pypcga"
Issues = "https://github.com/antoinecollet5/pypcga/issues"
Changelog = "https://github.com/antoinecollet5/pypcga/blob/master/CHANGELOG.rst"

[project.optional-dependencies]
all = ['pypcga[install, lint, tests, examples, docs]']
docs = [
    "pypcga[examples]",
    "sphinx<9",
    "nbsphinx",
    "nbsphinx-link>=1.3.1",
    "jupyter_sphinx>=0.3.2",
    "sphinx-jsonschema>=1.15",
    "pygments>=2.11.1",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
    "sphinx_math_dollar",
    "jupytext",
]
tests = [
    "twine==1.14.0",
    "pytest",
    "pytest-runner",
    "pytest-cov",
    "pytest-cookies",
    "coverage",
]
examples = ["matplotlib", "Ipykernel", "Ipython", "nested_grid_plotter"]
lint = ["pre-commit", "pre-commit-hooks", "codespell>=2.1.0", "ruff", "ty"]
install = ["pip", "wheel"]


[tool.setuptools]
# packages = ["pypcga"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pypcga*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "pypcga.__about__.__version__" }

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
src = ["pypcga", "tests", "docs"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    "examples",  # !!! This is temporary, it will be reintroduced later on !!!
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.13.
target-version = "py313"

[tool.pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style = "fstr"


[tool.codespell]
skip = "*.pyc,*.gif,*.png,*.jpg,*.ply, ./bibliography.bib,*.ipynb"
quiet-level = 3
ignore-words-list = "lod,byteorder,flem,parm,revered,inout,nd,WEL,wel,shat,ist"

[tool.ty.rules]
too-many-positional-arguments = "ignore"
missing-argument = "ignore"

# skip assert warnings with codacy
[tool.bandit]
skips = ["B101"]
